[package]
name = "dhcp4r"
version = "0.2.3"
authors = ["Richard Warburton <richard@warburton.it>"]
description = "IPv4 DHCP library with working server example."
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


# These URLs point to more information about the repository.
#documentation = "..."
#homepage = "..."

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
# readme = "..."

[dependencies]


[dev-dependencies]
time = "0.2"
